idf_component_register(
    SRCS
        "RideLink_main.cpp"
        "../src/Display.cpp"
        "../src/GPS.cpp"
        "../src/LoRa.cpp"
        "../src/Compass.cpp"
    INCLUDE_DIRS
        "../include"
    REQUIRES
        driver
        esp_lcd
        freertos
    PRIV_REQUIRES
        spi_flash
)
